--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "reactjs-popup": "^2.0.5",
+    "state-pool": "^0.10.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
