--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "matchmaker",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://10.16.1.91:5000",
+  "proxy": "https://10.16.1.91:5000",
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
     "@testing-library/jest-dom": "^5.16.5",
