--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axiom": "^0.1.6",
     "axios": "^1.4.0",
     "install": "^0.13.0",
     "npm": "^9.6.7",
