--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,5 @@ MONGODB_URI = "mongodb+srv://matchmaker:1VzOa7PPUJcYzVkf@matchmaker.di0ix6z.mong
 FLASK_SECRET_KEY = --
 JWT_SECRET_KEY = --
 DB_NAME = "matchMakingDb"
+SUPPORT_EMAIL = 'support@teammakeronline.com'
+SUPPORT_PASS = 'B1rth-0f-Pl3nty'
