--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^5.18.0",
     "reactjs-popup": "^2.0.5",
     "state-pool": "^0.10.0",
     "universal-cookie": "^4.0.4",
