--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,5 @@ FLASK_SECRET_KEY = --
 JWT_SECRET_KEY = --
 DB_NAME = "matchMakingDb"
 JWT_SECRET_KEY = "secretkey"
+SUPPORT_EMAIL = "support@teammakeronline.com"
+SUPPORT_PASS = "B1rth-0f-Pl3nty"
