--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,6 +23,7 @@ Flask-Session==0.5.0
 Flask-SQLAlchemy==3.0.3
 Flask-WTF==1.1.1
 fonttools==4.40.0
+gunicorn==20.1.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
