--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,5 @@
 MONGODB_URI = "mongodb+srv://matchmaker:1VzOa7PPUJcYzVkf@matchmaker.di0ix6z.mongodb.net/?retryWrites=true&w=majority"
-FLASK_SECRET_KEY = --
-JWT_SECRET_KEY = --
 DB_NAME = "matchMakingDb"
-JWT_SECRET_KEY = "secretkey"
+JWT_SECRET_KEY = "CZlRlrkW2SqikBmjIKy47tHgjBuiPUU5"
 SUPPORT_EMAIL = "support@teammakeronline.com"
 SUPPORT_PASS = "B1rth-0f-Pl3nty"
