--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,7 +8,7 @@ cachetools==5.3.1
 certifi==2022.12.7
 charset-normalizer==3.1.0
 click==8.1.3
-contourpy==1.1.0
+contourpy
 cssselect==1.2.0
 cssutils==2.7.1
 cycler==0.11.0
