--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "matchmaker",
   "version": "0.1.0",
   "private": true,
+  "proxy":"https://127.0.0.1:5000/",
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
     "@testing-library/jest-dom": "^5.16.5",
